--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fhersho/"
+    "url": "https://github.com/fhersho/YoSe"
   },
   "author": "Fernando Padilla Velez",
   "license": "ISC",
